# watchcat

./: .dockerignore  .env  .gitignore  Dockerfile  Dockerfile.updater  activate.sh  docker-compose.yml  live.py  live2.py  live3.py  live4.py  pyproject.toml  updater.py
core/: fetcher.py  market_clock.py  market_updater.py  runner.py  stock_loader.py  update.py
core2/: fetcher.py  market_clock.py  market_updater.py
data/: stocks.yml
init/: create-buckets.sh
init/sql/: schema.postgresql.sql
stocker/: collector.py  db.py  db_insert.py  dbpool.py  search.py  simbol.py  stocks.csv  updater.py  upsert.py
stocker/temp/: print_stock.py  search.py  stock_listing_dict.py  upsert.py
